--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "axe-playwright": "^2.0.1",
     "axe-core": "^4.8.4",
     "playwright": "^1.41.2",
-    "@axe-core/playwright": "^4.6.1",
-    "csv-writer": "^5.3.1"
+    "@axe-core/playwright": "^4.6.1"
   },
   "dependencies": {
     "axe-html-reporter": "^2.2.3"
